# btverinfo

./: LICENSE  README.md  pyproject.toml
src/btverinfo/: __init__.py  bt_assigned_numbers_db.py  gen_bt_assigned_db.py
